# insideairbnb-data-pipeline

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
dagster_project/: .gitignore  Dockerfile  assets.py  dagster.yaml  definitions.py  partitions.py  requirements.txt  resources.py  sensors.py  setup_clickhouse.py  workspace.yaml
dagster_project/bronze/: assets.py  parsers.py  sensors.py
dagster_project/config/: column_overrides.yaml
dagster_project/dbt_project/: dbt_project.yml  profiles.yml
dagster_project/dbt_project/macros/: source_iceberg.sql
dagster_project/dbt_project/models/: sources.yml
dagster_project/dbt_project/models/marts/: dim_geo_neighbourhoods.sql  dim_neighbourhoods.sql  fct_listings.sql  fct_reviews.sql
dagster_project/gold/: assets.py  sensors.py
dagster_project/shared/: downloader.py  utils.py
dagster_project/silver/: assets.py  repositories.py  sensors.py
